Visual Studioを使ってコミット

--- a/mywork/program/VDP予測/VDP_lorenz.ipynb
+++ b/mywork/program/VDP予測/VDP_lorenz.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,10 +194,12 @@
     "    # due to initialization.\n",
     "    variable_seed = seed \n",
     "    \n",
+    "    N_value = int(N)  # Nを整数に変換    \n",
+    "    \n",
     "    losses = []; r2s = [];\n",
     "    for n in range(instances):\n",
     "        # Build your model given the input parameters\n",
-    "        reservoir = Reservoir(N, \n",
+    "        reservoir = Reservoir(N_value, \n",
     "                              sr=sr, \n",
     "                              lr=lr, \n",
     "                              input_scaling=iss, \n",
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +242,7 @@
     "    \"seed\": 42,                      # the random state seed, to ensure reproducibility\n",
     "    \"instances_per_trial\": 3,        # how many random ESN will be tried with each sets of parameters\n",
     "    \"hp_space\": {                    # what are the ranges of parameters explored\n",
-    "        \"N\": [\"choice\", 1000],             # the number of neurons is fixed to 500\n",
+    "        \"N\": [\"quniform\", 500, 5000, 1],             # the number of neurons is fixed to 500\n",
     "        \"sr\": [\"loguniform\", 1e-2, 10],   # the spectral radius is log-uniformly distributed between 1e-2 and 10\n",
     "        \"lr\": [\"loguniform\", 1e-3, 1],  # idem with the leaking rate, from 1e-3 to 1\n",
     "        \"iss\": [\"uniform\", 0, 1],           # the input scaling uniformly distributed between 0 and 1\n",
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,21 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 44%|████▍     | 88/200 [14:26<18:15,  9.78s/trial, best loss: 0.008913347808259657]"
+      "  1%|          | 2/200 [03:50<6:02:58, 109.99s/trial, best loss: 0.011565198787486498]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.00805e-16): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=4.05687e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.8531e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=4.60292e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n"
      ]
@@ -301,20 +309,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 45%|████▌     | 90/200 [14:46<18:07,  9.88s/trial, best loss: 0.008913347808259657]"
+      "  2%|▏         | 4/200 [05:24<3:26:14, 63.13s/trial, best loss: 0.01089080257034867]  "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=8.83586e-17): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.72492e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=8.90908e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=9.24093e-17): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.75204e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n"
      ]
@@ -323,20 +328,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 46%|████▋     | 93/200 [15:16<17:29,  9.81s/trial, best loss: 0.008913347808259657]"
+      "  2%|▎         | 5/200 [05:55<2:47:41, 51.60s/trial, best loss: 0.01089080257034867]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=3.59682e-17): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=7.90779e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=4.08215e-17): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=9.01335e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=4.01978e-17): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=7.06853e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n"
      ]
@@ -345,14 +350,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 48%|████▊     | 96/200 [15:46<17:08,  9.89s/trial, best loss: 0.008913347808259657]"
+      "  5%|▌         | 10/200 [16:02<5:53:39, 111.68s/trial, best loss: 0.01089080257034867]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.06466e-16): result may not be accurate.\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.91028e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=2.14033e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.55693e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "\n"
      ]
@@ -361,108 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 76%|███████▌  | 151/200 [24:47<07:54,  9.69s/trial, best loss: 0.008913347808259657]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.73111e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=6.25672e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.94867e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 76%|███████▋  | 153/200 [25:06<07:31,  9.60s/trial, best loss: 0.008913347808259657]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=4.58015e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.52505e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=5.14009e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 81%|████████  | 162/200 [26:32<06:00,  9.49s/trial, best loss: 0.008913347808259657]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.01729e-16): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 164/200 [26:53<06:00, 10.01s/trial, best loss: 0.008913347808259657]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=7.32166e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=8.43482e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=8.53964e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 85%|████████▌ | 170/200 [27:51<04:50,  9.68s/trial, best loss: 0.008913347808259657]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=7.75506e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n",
-      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=8.28423e-17): result may not be accurate.\n",
-      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [32:41<00:00,  9.81s/trial, best loss: 0.008913347808259657]\n"
+      "  6%|▌         | 12/200 [20:05<5:37:19, 107.66s/trial, best loss: 0.01089080257034867]"
      ]
     }
    ],
@@ -651,14 +561,10 @@
    "source": [
     "### Generative Modelを使ってみる\n",
     "\n",
-    "そもそも誤差がかなり小さいのだから、Generative Modelも序盤は良い振る舞いを見せると予想する。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "やり直し"
+    "考えることは以下の通り\n",
+    "\n",
+    "1. Generative modelを更新するごとに、外力に関しては実データを用いる。\n",
+    "2. 一周期$2\\pi$で約1日に相当する。最終的には14日程度の予測を行えるようにしたいので、約100程度の予測が出来れば十分である。"
    ]
   }
  ],
