vdp_lorenz, multi_gen, コメントを残しました

--- a/mywork/program/VDP予測/gen_pred_ch1.ipynb
+++ b/mywork/program/VDP予測/gen_pred_ch1.ipynb
@@ -829,18 +829,31 @@
    "source": [
     "これで，VDPのlorenzのx項が外力に含まれる場合にGenerative Modelがうまく作動することを確認できた．\n",
     "\n",
-    "データ幅が$0.1$であることを考慮すると，約5~6ステップの間はVDPのX,Yの予測に成功しているようである．\n",
-    "一方で，lorenzのx, y, z項を見ると，それよりずっと早く予測精度が悪くなってしまっている．よって，次のことが考えられる．\n",
+    "データ幅が$0.1$であることを考慮すると，約5~6ステップの間はVDPのX,Yの予測に成功しているようである（これは約1日に対応する）．\n",
+    "一方で，lorenzのx, y, z項を見るとそれよりずっと早く予測精度が悪くなってしまっている．よって，次のことが考えられる．\n",
     "\n",
     "・lorenzに関しては予測データの更新ごとに実データを参照することで，精度が上がる可能性がある．\n",
     "\n",
-    "・lorenzの実データは全て既知であると仮定すると，esnの最適化（multi_generations_predではhyperparametersの値として現れる）で，予測期間を含めた期間の間，すなわちtrain_data+nb_generationsの間でlorenzに関するnrmseも最適化の対象として考慮する．元々のVDPのX，Yの最適化も考える必要があるだろうから，その二つを重み付けして実現できるかもしれない．例えば，二つの誤差の量を線型結合でまとめて，その係数も最適化の対象に含めるなど．"
+    "・lorenzの実データは全て既知であると仮定すると，esnの最適化（multi_generations_predではhyperparametersの値として現れる）で，予測期間を含めた期間の間，すなわちtrain_data $+$ nb_generationsの間でlorenzに関するnrmseも最適化の対象として考慮する．元々のVDPのX，Yの最適化も考える必要があるだろうから，その二つを重み付けして実現できるかもしれない．例えば，二つの誤差の量を線型結合でまとめて，その係数も最適化の対象に含めるなど．"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 今後の方針\n",
+    "\n",
+    "1. lorenzに対して，multi_genを試してみる（すぐにできるはず）．\n",
+    "2. lorenzの値を更新するように上のコードを修正する．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chapter 1\n",
+    "終わり"
+   ]
   }
  ],
  "metadata": {
