--- a/mywork/program/VDP予測/gen_pred_ch2.ipynb
+++ b/mywork/program/VDP予測/gen_pred_ch2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 µs\n",
+      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
       "Wall time: 3.1 µs\n"
      ]
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "(25100, 5)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,423 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_gen, X_t, warming_out, warming_inputs = esn_chaos_prediction(X, 3849, 0.14258024657972923, 0.5516837456874331, 3.7433235003717447e-07, 1234, 0.1931498404234262)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +387,7 @@
        "       [ 2.02894424, -1.54313599, 26.09975225]])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +413,7 @@
        "       [ 1.15741966, -4.28226317, 28.11512762]])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
