VDP+lorenzフォルダにまとめました

--- a/mywork/program/VDP予測/VDP+lorenz/gen_pred_ch1.ipynb
+++ b/mywork/program/VDP予測/VDP+lorenz/gen_pred_ch1.ipynb
@@ -70,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "#必要なパッケージのインポート\n",
     "\n",
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +186,7 @@
        "'def generative_model(X, N, iss, lr, ridge, seed, sr, forecast = 1, train_len = 2000, seed_timesteps = 100, nb_generations = 400):\\n    \\n    \\n    n, m = X.shape\\n    \\n    # モデルの構築\\n    reservoir = Reservoir(N, \\n                        sr=sr, \\n                        lr=lr, \\n                        input_scaling=iss, \\n                        seed=seed)\\n    readout = Ridge(ridge=ridge)\\n    esn = reservoir >> readout\\n        \\n    from reservoirpy.datasets import to_forecasting\\n    \\n    x, y = to_forecasting(X, forecast=forecast)\\n    X_train, y_train = x[:train_len], y[:train_len]\\n    X_test, y_test = x[train_len:], y[train_len:]   \\n    \\n    # モデルの訓練と予測\\n    esn = esn.fit(X_train, y_train)\\n    \\n    seed_timesteps = 100\\n\\n    warming_inputs = X_test[:seed_timesteps]\\n\\n    warming_out = esn.run(warming_inputs, reset=True)  # warmup\\n    \\n    nb_generations = 400\\n\\n    X_gen = np.zeros((nb_generations, m))\\n    y = warming_out[-1]\\n    for t in range(nb_generations):  # generation\\n        y = esn(y)\\n        X_gen[t, :] = y\\n        \\n    X_t = X_test[seed_timesteps: nb_generations+seed_timesteps]\\n\\n    return X_gen, X_t, warming_out, warming_inputs\\n'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +246,7 @@
        "'X_gen_result, X_t_result, warming_out_result, warming_inputs_result = generative_model(X, 500, 1.0, 0.3, 1e-4, 1234, 0.99, 1, 2000, 100, 400)'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +266,7 @@
        "'X_t = X_test[seed_timesteps: nb_generations+seed_timesteps]\\nplot_generation(X_gen, X_t, nb_generations, warming_out=warming_out,\\n                warming_inputs=warming_inputs, seed_timesteps=seed_timesteps)\\n'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +718,7 @@
        "(25100, 5)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -981,8 +989,7 @@
    "source": [
     "# 今後の方針\n",
     "\n",
-    "1. lorenzに対して，multi_genを試してみる（すぐにできるはず）→ほぼ完了．\n",
-    "2. lorenzの値を更新するように上のコードを修正する．"
+    "1. lorenzの値を更新するように上のコードを修正する．"
    ]
   },
   {
