--- a/mywork/program/VDP予測/VDP+lorenz/gen_pred_ch2.ipynb
+++ b/mywork/program/VDP予測/VDP+lorenz/gen_pred_ch2.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
+      "CPU times: user 1 µs, sys: 0 ns, total: 1 µs\n",
       "Wall time: 3.1 µs\n"
      ]
     }
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +254,7 @@
        "(25100, 5)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +394,7 @@
        "       [ 2.02894424, -1.54313599, 26.09975225]])"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +420,7 @@
        "       [ 1.15741966, -4.28226317, 28.11512762]])"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
