--- a/mywork/program/Rossler予測_new/2/2.1/2.1.1.ipynb
+++ b/mywork/program/Rossler予測_new/2/2.1/2.1.1.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
-      "Wall time: 1.91 µs\n"
+      "CPU times: user 2 µs, sys: 1 µs, total: 3 µs\n",
+      "Wall time: 5.01 µs\n"
      ]
     }
    ],
