研究結果のスライドが未完成

--- a/slides/input/appendix.tex
+++ b/slides/input/appendix.tex
@@ -1,6 +1,12 @@
 \section{Appendix}
 
-\subsection{その他の主な結果}
+\begin{frame}
+    \begin{center}
+        \LARGE Appendix
+    \end{center}
+\end{frame}
+
+\subsection{その他の主要な結果}
 \begin{frame}{}
 
 \end{frame}
