--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -40,18 +40,18 @@
 \newcommand{\blue}[1]{\textcolor{blue!80!black}{#1}}
 
 % 数学的なコマンド
-\newcommand{\R}{\mathbb{R}}x
+\newcommand{\R}{\mathbb{R}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\C}{\mathbb{C}} 
 
-\includeonly{input/main}
+\includeonly{input/experiments}
 
 % タイトル情報
 \title[]{Reservoir Computerによる外力付きカオス時系列モデルの予測と生体リズム研究への応用}
 \subtitle{}
 \author[Talker: Sho Kuno]{発表者：久野証}
-\institute[計数工学科数理情報工学コース]{東京大学工学部計数工学科数理情報工学コース }
+\institute[計数工学科数理情報工学コース]{東京大学工学部計数工学科数理情報工学コース 4年}
 \date{\today}
 
 % ドキュメントの開始
@@ -63,7 +63,9 @@
         \tableofcontents
     \end{frame}  
 
-    \input{input/main.tex}
+    \input{input/motivation.tex}
+    \input{input/experiments.tex}
+    \input{input/theory.tex}
     \input{input/appendix.tex}
 
 \end{document}
